<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:paddingBottom="12dp"
        android:paddingTop="12dp">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/header_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp">

            <TextView
                android:id="@+id/sign_up_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/job_offer_form_title"
                android:textColor="@color/colorAccent"
                android:textSize="18sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/back_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:drawableLeft="@drawable/ic_back_arrow"
                android:drawableTint="@color/colorAccent"
                android:foreground="?attr/selectableItemBackground"
                android:minHeight="0dp"
                android:minWidth="0dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent" />

        </android.support.constraint.ConstraintLayout>


        <TextView
            android:id="@+id/category_title_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/header_layout"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/category_title_text"
            android:textSize="12sp" />

        <Spinner
            android:id="@+id/category_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/category_title_text_view"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:entries="@array/categories"
            android:paddingBottom="6dp"
            android:paddingTop="6dp" />


        <android.support.design.widget.TextInputLayout
            android:id="@+id/company_name_edit_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/category_spinner"
            android:layout_marginEnd="12dp"
            android:layout_marginStart="12dp"
            android:paddingTop="8dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/company_name_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/company_name_hint_text"
                android:inputType="textCapWords"
                android:lines="1"
                android:textSize="16sp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/phone_edit_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/company_name_edit_layout"
            android:layout_marginEnd="12dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="6dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/phone_number_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone_number_hint_text"
                android:inputType="phone"
                android:lines="1"
                android:textSize="16sp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/address_edit_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/phone_edit_layout"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginTop="6dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/address_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/address_hint_text"
                android:inputType="textCapSentences"
                android:textSize="16sp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/vacancy_details_edit_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/address_edit_layout"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginTop="6dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/vacancy_details_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/vacancy_details_hint_text"
                android:inputType="textCapSentences|textMultiLine"
                android:textSize="16sp" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/first_warning_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/vacancy_details_edit_layout"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="12dp"
            android:text="@string/vacancy_details_warning_text"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/second_warning_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/first_warning_text_view"
            android:layout_marginBottom="6dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="12dp"
            android:text="@string/sending_form_second_warning"
            android:textSize="12sp" />

        <Button
            android:id="@+id/submit_form_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/second_warning_text_view"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="32dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/button_curved_blue_background"
            android:padding="12dp"
            android:text="@string/submit_form_button_text"
            android:textColor="#FFFFFF" />

        <ProgressBar
            android:id="@+id/vacancy_form_progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="gone" />

    </RelativeLayout>
</ScrollView>