<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient">

    <ImageView
        android:id="@+id/back_arrow_image_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="?attr/selectableItemBackground"
        android:paddingBottom="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="24dp"
        android:src="@drawable/ic_arrow_back_black_24dp"
        android:tint="@android:color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/detail_title_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="18dp"
        android:gravity="start"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/back_arrow_image_view"
        tools:text="Commnity Pharmacist (Night Shift)" />

    <TextView
        android:id="@+id/detail_company_name_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="2dp"
        android:gravity="start"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/detail_title_text_view"
        tools:text="Sara Alshamy Pharmacy" />

    <TextView
        android:id="@+id/posted_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="4dp"
        android:text="@string/posted_title"
        android:textColor="@android:color/white"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/detail_company_name_tv" />

    <TextView
        android:id="@+id/detail_created_at_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="4dp"
        android:gravity="start"
        android:textColor="@android:color/white"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@id/posted_text_view"
        app:layout_constraintTop_toBottomOf="@id/detail_company_name_tv"
        tools:text="3 days ago" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="26dp"
        android:background="@drawable/layout_curved_two_corners"
        android:fillViewport="true"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/posted_text_view">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/inside_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:elevation="12dp"
            android:paddingTop="4dp">

            <TextView
                android:id="@+id/detail_phone_title_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/montserrat_bold"
                android:gravity="start"
                android:text="@string/phone_number_title"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/detail_phone_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:gravity="start"
                android:textColor="@color/details_content_color"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/detail_phone_title_tv"
                tools:text="2 012 555 5555" />

            <TextView
                android:id="@+id/call_now_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="24dp"
                android:background="@drawable/blue_frame"
                android:drawablePadding="4dp"
                android:drawableStart="@drawable/ic_phone_black_24dp"
                android:foreground="?android:attr/selectableItemBackground"
                android:paddingBottom="8dp"
                android:paddingEnd="12dp"
                android:paddingStart="8dp"
                android:paddingTop="8dp"
                android:text="@string/call_now_text"
                android:textColor="@color/colorAccent"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/detail_phone_text_view"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/detail_phone_title_tv" />

            <TextView
                android:id="@+id/detail_address_title_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/montserrat_bold"
                android:gravity="start"
                android:text="@string/address_title"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/detail_phone_text_view" />

            <TextView
                android:id="@+id/detail_address_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:fontFamily="@font/open_sans"
                android:gravity="start"
                android:textColor="@color/details_content_color"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/detail_address_title_tv"
                tools:text="Al Sheikh Zayed, Abdel-hamid Soliman, Ismailia" />

            <TextView
                android:id="@+id/detail_desc_title_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/montserrat_bold"
                android:gravity="start"
                android:text="@string/job_description_title"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/detail_address_text_view" />

            <TextView
                android:id="@+id/detail_desc_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:fontFamily="@font/open_sans"
                android:gravity="start"
                android:text="@string/not_defined_text"
                android:textColor="@color/details_content_color"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/detail_desc_title_tv"
                tools:text="Pharmacist Required to work Part-time in a well known pharmacy, must have experience" />


            <TextView
                android:id="@+id/detail_work_hours_title_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/montserrat_bold"
                android:gravity="start"
                android:text="@string/working_hours_title"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/detail_desc_text_view" />

            <TextView
                android:id="@+id/detail_work_hours_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:fontFamily="@font/open_sans"
                android:gravity="start"
                android:textColor="@color/details_content_color"
                android:text="@string/not_defined_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/detail_work_hours_title_tv"
                tools:text="10AM - 6PM (Sat-Fri)" />

            <TextView
                android:id="@+id/detail_salary_title_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/montserrat_bold"
                android:gravity="start"
                android:text="@string/salary_title"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/detail_work_hours_text_view" />

            <TextView
                android:id="@+id/detail_salary_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:fontFamily="@font/open_sans"
                android:gravity="start"
                android:text="@string/not_defined_text"
                android:textColor="@color/details_content_color"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/detail_salary_title_tv"
                tools:text="250-300 EGP / HOUR" />

        </android.support.constraint.ConstraintLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>